# smart_speaker

./: .gitignore  .gitmodules  README  remote.txt
app/bluetooth_handfree_call/source/: .app_hs.c.swo  .app_hs.c.swp  app_hs.c
app/bluetooth_sink/: Makefile  blue_state.json
app/bluetooth_sink/lib_ble/include/: app_json.h  app_manager.h  app_mqtt.h  app_utils.h  app_xml_utils.h
app/bluetooth_sink/lib_ble/source/: app_avk.c  app_disc.c  app_json.cpp  app_manager.c  app_mqtt.c  app_utils.c  app_xml_param.c  app_xml_utils.c
app/bluetooth_sink/syn_ble/source/: app_avk_main.c  app_manager_main.c
app/connectivity_app/: API_define.md  ConnectivityServer  ConnectivityServer.cpp  Makefile  README.md
app/connectivity_app/config/: info.json
app/connectivity_app/controller/: MetaDataRequest.cpp  MetaDataRequest.h  WifiRequest.cpp  WifiRequest.h
app/connectivity_app/model/: HandleData.cpp  HandleData.h  HandleSystem.cpp  HandleSystem.h  HttpResponse.cpp  HttpResponse.h
app/connectivity_app/model/SHA256/: SHA256.h
app/connectivity_app_bluetooth/: Makefile  README.md
app/connectivity_app_bluetooth/lib_ble/source/: app_manager.c
app/connectivity_app_bluetooth/syn_ble/include/: app_ble_server.h  app_curl_request.h  app_handle.h
app/connectivity_app_bluetooth/syn_ble/source/: app_ble.c  app_ble_main.c  app_ble_server.c  app_curl_request.c  app_handle.c
app/ota/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  run_ota_daemon.sh
app/ota/Application/: Makefile  cmake_install.cmake
app/ota/Application/include/: FileWraper.h  HTTPDownload.h  HTTPPing.h  HttpPost.h  MQTTClient.h  MQTTClientObserverInterface.h  MessageConsumerInterface.h  OtaClient.h  OtaDefines.h  Session.h  SessionObserverInterface.h
app/ota/Application/src/: CMakeLists.txt  FileWraper.cpp  HTTPDownload.cpp  HTTPPing.cpp  HttpPost.cpp  MQTTClient.cpp  Makefile  OtaClient.cpp  Session.cpp  cmake_install.cmake  main  main.cpp
app/ota/Config/: ota_config.json  ota_version_info.json
app/ota/libs/: Makefile  cmake_install.cmake
app/ota/libs/rapidjson/: Makefile  cmake_install.cmake
app/patch-1.26.0/applications/: CMakeLists.txt
app/patch-1.26.0/applications/acsdkVinBigDataAdapter/: CMakeLists.txt
app/patch-1.26.0/applications/acsdkVinBigDataAdapter/acsdkKWD/src/: KWDComponent.cpp
app/patch-1.26.0/applications/acsdkVinBigDataAdapter/acsdkKWDProvider/src/: VinBigDataRegistration.cpp
app/patch-1.26.0/applications/acsdkVinBigDataAdapter/include/VinBigData/: VinBigDataKeywordDetector.h
app/patch-1.26.0/applications/acsdkVinBigDataAdapter/src/: CMakeLists.txt  VinBigDataKeywordDetector.cpp
app/patch-1.26.0/cmakeBuild/cmake/: KeywordDetector.cmake
app/vRootApp/: README.md  config.txt  vRootApp.cpp
app/vbd_DOS/vbd_DOS_decode/: README.md  decode_wav.cpp
app/vbd_DOS/vbd_DOS_decode/reed-solomon/: rs.hpp
app/vbd_DOS/vbd_DOS_encode/: README.md  encode_wav.cpp  encode_wav.h
app/vbd_DOS/vbd_DOS_encode/reed-solomon/: poly.hpp
app/wuw/: CMakeLists.txt  main_process.cpp  main_process.h  native-lib.cpp  wuw.h
app/wuw/common/: cipher.cpp  cipher.h  config_reader.cpp  config_reader.h  defs.h  exception.h  feature_extractor.cpp  feature_extractor.h  log.h  logaddexp.h  utils.cpp  utils.h
app/wuw/e2e/: cra_wuw.cpp  cra_wuw.h  siri_wuw.cpp  siri_wuw.h  tflite.h
app/wuw/include/: main_process.h  wuw.h
app/wuw/include/base/: kaldi-math.h  kaldi-types.h
app/wuw/include/botan/: build.h
app/wuw/include/common/: bundle.h  cipher.h  config_reader.h  defs.h
app/wuw/include/kaldi/: kaldi_based_wuw.h  lattice_analysis.h  lattice_faster_decoder_vbdi.h  online_ivector_feature_bdi.h  online_nnet3_decoding_bdi.h
app/wuw/include/util/: parse-options.h
app/wuw/kaldi/: classifier.cc  classifier.h  decodable_online_looped_bdi.cc  decodable_online_looped_bdi.h  kaldi_based_wuw.cpp  lattice_analysis.cc  lattice_faster_decoder_vbdi.cc  lattice_faster_online_decoder_bdi.cc  lattice_faster_online_decoder_bdi.h  model.cc  model.h  online_endpoint_bdi.cc  online_endpoint_bdi.h  online_ivector_feature_bdi.cc  online_nnet3_decoding_bdi.cc
script/: Readme.md  add_libs_evk_avs.sh  add_usb_external.sh  androidConfig.txt  build.sh  build_evk.sh  build_linux_1.26.0.sh  gen_config.sh  rebuild.sh  rebuild_evk.sh  rebuild_raspberry.sh  script_wuw.sh  sdk_build_all.sh  setup_avs_android.sh  toolchain.cmake
sdk-install/: CONFIG.json  configENV.json  info.json  metadata.json
vbd_workdir/common/alsa_config/alsa/: asoundrc  dmicarray.conf  dmixer.conf
vbd_workdir/lib/common_lib/: libFLAC.so.8  libX11.so.6  libasound.so.2.0.0  libbsd.so.0.8.3  libev.so.4  libexpat.so.1.6.2  liblz4.so.1  liblzma.so.5  libsbc.so.1  libsndfile.so.1  libsystemd.so.0.17.0  libudev.so.1.6.5  libvorbisenc.so.2  libwebsockets.so.8  libz.so.1.2.8
vbd_workdir/script/: S82vbd.sh  startup.sh
vbd_workdir/vbd_avs/sdk-install/: info.json  profileId.json
