cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(VINBIGDATA LANGUAGES CXX)

include(${AVS_CMAKE_BUILD}/BuildDefaults.cmake)

set(TARGET_KWD_LIB "VINBIGDATA" PARENT_SCOPE)

#message(STATUS "SET TARGET_KWD_LIB: ${TARGET_KWD_LIB}")

set(KWD_ADAPTER_REGISTRATION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/acsdkKWDProvider/src/VinBigDataRegistration.cpp" CACHE INTERNAL "")
set(KWD_COMPONENT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/acsdkKWD/src/KWDComponent.cpp" CACHE INTERNAL "")

message(STATUS "SET KWD_ADAPTER_REGISTRATION_FILE: ${KWD_ADAPTER_REGISTRATION_FILE}")
message(STATUS "SET KWD_COMPONENT_FILE: ${KWD_COMPONENT_FILE}")

add_subdirectory("src")